# ucloud-api

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: authentication.md  cli-reference.md  configuration.md  contributing.md  files-and-storage.md  getting-started.md  how-it-works.md  index.md  queue-and-batch.md  troubleshooting.md
docs/guides/: configuration.md  files-and-storage.md  job-specs.md  queue-and-batch.md
docs/tutorials/: 01-first-gpu-job.md  02-from-existing-job.md  02-training-run.md  03-python-library.md  04-dataset-training-results.md
examples/: pytorch.toml  train-batch.toml
src/ucloud_api/: __init__.py  auth.py  catalog.py  cli.py  client.py  config.py  exceptions.py  files.py  jobqueue.py  jobs.py  launch.py  models.py  params.py  scaffold.py  shell.py  spec.py  ssh.py  transfer.py
tests/: test_auth.py  test_catalog.py  test_cli_format.py  test_cli_helpers.py  test_client.py  test_files.py  test_jobqueue.py  test_jobs.py  test_launch.py  test_params.py  test_scaffold.py  test_shell.py  test_spec.py  test_transfer.py
