[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ucloud-api"
version = "0.1.0"
description = "Unofficial CLI + Python client to launch and control GPU jobs on UCloud (SDU eScience, Denmark) without the web GUI"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Guillaume Mougeot" }]
keywords = ["ucloud", "sdu", "hpc", "gpu", "slurm", "cli", "escience"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "platformdirs>=4.2",
    "python-dotenv>=1.0",
    "tomli-w>=1.0",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/GuillaumeMougeot/ucloud-api"
Repository = "https://github.com/GuillaumeMougeot/ucloud-api"
Issues = "https://github.com/GuillaumeMougeot/ucloud-api/issues"

[project.scripts]
ucloud = "ucloud_api.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
]
docs = [
    "mkdocs-material>=9.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ucloud_api"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
